--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,12 @@ python = ">=3.8,<4.0"
 buildarr = ">=0.4.0,<0.5.0"
 prowlarr-py = ">=0.3.2,<0.4.0"
 
+[tool.poetry.group.sonarr]
+optional = true
+
+[tool.poetry.group.sonarr.dependencies]
+buildarr-sonarr = ">=0.4.0"
+
 [tool.poetry.group.dev.dependencies]
 black = "23.1.0"
 mypy = "1.1.1"
@@ -53,6 +59,9 @@ types-requests = "2.28.11.15"
 mkdocs = "1.4.2"
 mkdocstrings = {extras = ["python"], version = "0.20.0"}
 ruff = "0.0.255"
+
+[tool.poetry.extras]
+sonarr = ["buildarr-sonarr"]
 
 [tool.ruff]
 fix = true
