Add all known Prowlarr v1.0 features (except for download client category mapping)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
       - General: "configuration/settings/general.md"
       - UI: "configuration/settings/ui.md"
   - Buildarr: "https://buildarr.github.io"
+  - GitHub: "https://github.com/buildarr/buildarr-prowlarr"
 
 watch:
   - buildarr_prowlarr
