--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ packages = [{include = "buildarr_prowlarr"}]
 python = ">=3.8,<4.0"
 prowlarr-py = ">=0.3.2,<0.4.0"
 buildarr = ">=0.5.0,<0.6.0"
-# buildarr-sonarr = {version = ">=0.4.1", optional = true}
+buildarr-sonarr = {version = ">=0.5.0", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 black = "23.3.0"
@@ -54,8 +54,8 @@ mkdocs = "1.4.2"
 mkdocstrings = {extras = ["python"], version = "0.21.2"}
 ruff = "0.0.261"
 
-# [tool.poetry.extras]
-# sonarr = ["buildarr-sonarr"]
+[tool.poetry.extras]
+sonarr = ["buildarr-sonarr"]
 
 [tool.ruff]
 fix = true
